@@ -278,17 +278,27 @@
 	background-color: #bef;
 }
 
-.course-structure table {
-	width: 100%;
-	margin-top: 20px;
-}
-
-.course-structure table th {
-	text-align: left;
-}
-
-.course-structure table th {
-	margin: 3px 20px 3px 0;
+.course-structure {
+	table {
+		width: 100%;
+		margin-top: 20px;
+		th {
+			text-align: left;
+			margin: 3px 20px 3px 0;
+		}
+		tr {
+			td {
+				border-bottom: 1px solid #dfdfdf;
+				text-align: center;
+				vertical-align: middle;
+			}
+			&.page {
+				small {
+					opacity: .8;
+				}
+			}
+		}
+	}
 }
 
 .course-structure .column-course-structure {
@@ -309,18 +319,6 @@
 }
 
 .course-structure table thead tr.break th {
-	border-bottom: 1px solid #DFDFDF;
-}
-
-.course-structure table tfoot tr.break th {
-}
-
-.course-structure table td {
-	text-align: center;
-	vertical-align: middle;
-}
-
-.course-structure table tr td {
 	border-bottom: 1px solid #DFDFDF;
 }
 
