@@ -23,6 +23,7 @@ CHANGELOG
 * Improved: Inrease a course assessments page load time.
 * Improved: Image display.
 * Improved: Removed unused function CoursePress_Data_Course::is_course_preview()
+* Improved: Better section title display - added information about no title.
 
 * Fixed: Default unit title height to avoid collapse when empty.
 * Fixed: Instructor profile course lists on multisite.
